two typos fixed

--- a/chapter_tmcomposition.tex
+++ b/chapter_tmcomposition.tex
@@ -250,8 +250,8 @@ The same can be seen in ExpAll where negative residues reach above 2\% only as f
 
 Residue presence is a zero\--sum variable.
 If there is more likelihood of a positively\--charged residue being present at an inside position, then there must be less probability of at least one type of amino acid at that position.
-To check if this probability was spread throughtout non\--charged amino acids as well as negatively\--charged amino acids, we also examined non-charged polar residues for any inside versus outside preference (Figure~\ref{fig:single_pass_charge_distribution}B and Figure~\ref{fig:single_pass_charge_distribution}C).
-As expected there was an increased prevelence at the flanks (peaking at position +12 with 2.27\% in Expall and 2.39 at position \--10 in UniHuman), however, there was no clear difference between the inside and outside flank relative percentages.
+To check if this probability was spread throughout non\--charged amino acids as well as negatively\--charged amino acids, we also examined non-charged polar residues for any inside versus outside preference (Figure~\ref{fig:single_pass_charge_distribution}B and Figure~\ref{fig:single_pass_charge_distribution}C).
+As expected there was an increased prevalence at the flanks (peaking at position +12 with 2.27\% in Expall and 2.39 at position \--10 in UniHuman), however, there was no clear difference between the inside and outside flank relative percentages.
 In ExpAll the inside flank (1.8\% relative percentage average) to outside (1.9\% relative percentage average) was between 5 to 10 times less than the negatively\--charged residue inside\--outside difference, and there was very little difference in the UniProt inside (1.88\% relative percentage average) to outside (1.94\% relative percentage average) relative abundance.
 
 % multipass
@@ -357,7 +357,7 @@ Glutamic acid is also lower at the inside flank (2.4\%) than the 2.8\% on the ou
 Slight variations in defining the membrane boundary point do not influence the trend (compare figures~\ref{fig:multi_pass_charge_distribution}C and~\ref{fig:multi_pass_charge_distribution}E).
 We find that, in all studied conditions, the UniHuman dataset delivers statistical significances (p\--values: (i) 6.10e-34, (ii) 5.43e-41, (iii) 3.00e-57, (iv) 5.60e-41) strongly supporting negative\--charge bias (inside suppression/outside preference; see Table~\ref{table:multipassstats}).
 
-As with the single\--pass proteins, we checked if this probability was spread throughtout non\--charged amino acids as well as negatively\--charged amino acids by examining non-charged polar residues for inside versus outside preference (Figure~\ref{fig:multi_pass_charge_distribution}B and Figure~\ref{fig:multi_pass_charge_distribution}C).
+As with the single\--pass proteins, we checked if this probability was spread throughout non\--charged amino acids as well as negatively\--charged amino acids by examining non-charged polar residues for inside versus outside preference (Figure~\ref{fig:multi_pass_charge_distribution}B and Figure~\ref{fig:multi_pass_charge_distribution}C).
 There was no clear difference between the inside and outside flank relative percentages for ExpAll since the inside flank was 1.9\% (relative percentage average) and the outside flank was 2.0\% (relative percentage average).
 There was some small difference in the UniHuman dataset with the inside average being 1.9\% and the outside average being 2.2\%.
 This however is much less of a difference than the negatively\--charged residue flank differences in the UniHuman dataset.
