Changed SwissProt to Uniprot for clarity

--- a/chapter_tailanchor.tex
+++ b/chapter_tailanchor.tex
@@ -505,7 +505,7 @@ Similarly, alanine is the second most common residue in mitochondrial located \g
 \begin{figure}
 \centering
 \includegraphics[width=1\textwidth]{TA_chapter/UniProt-heatmaps}
-\captionof{figure}[The normalised skews of each amino acids from tail\--anchored proteins grouped by localisation from the SwissProt automatically filtered dataset.]
+\captionof{figure}[The normalised skews of each amino acids from tail\--anchored proteins grouped by localisation from the UniProt manually curated dataset.]
 {\textbf{The normalised skews of each amino acids from tail\--anchored proteins grouped by localisation from the UniProt manually curated dataset.}
 
 The residue position aligned with the centre of the TMH is on the horizontal axis, and the residue type is on the vertical axis.
